welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:16: error: not found: value resta
  return (restea==resteb || resta==restec || resteb==restec)
                            ^