welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {

  var restea:Int = a
  var resteb:Int = b
  var restec:Int = c
  
  while (restea>9) {
    restea=(restea%10)
  }
  while (resteb>9) {
    resteb=(resteb%10)
  }
  while (restec>9) {
    restec=(restec%10)
  }
  return (restea==resteb || resta==restec || resteb==restec)

}